--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Variable</title>
+    <title>Document</title>
 </head>
 <body>
-    <script src="output.js"></script>
-    <script src="variable.js"></script>
-    
+    <script src="project.js"></script>
+    <script src="formula.js"></script>
 </body>
 </html>
